:lipstick: fixed mobile waves and increased readability

--- a/splash.css
+++ b/splash.css
@@ -1,4 +1,3 @@
-
 /*
     CREDITS TO: https://codepen.io/Coderesting/pen/RwwLPZM
     I just edited it a little bit to be more random (using js) and not in loop
@@ -52,6 +51,7 @@
 }
 
 .waves > div {
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -66,6 +66,12 @@
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
     opacity: 0;
+}
+
+@media (max-aspect-ratio: 1/1) {
+    .waves > div {
+        rotate: 90deg;
+    }
 }
 
 .waves > div:nth-child(2) {
